# CarryPigeon

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/service/: account.rs
src/components/: NavComponent.vue
src/function/: authenticator.ts  message_service.ts
src/router/: index.ts
src/views/: AddressBookView.vue  Chat.vue  ChatView.vue  Home.vue  HomeView.vue  SettingView.vue
