[package]
name = "carrypigeon"
version = "0.0.1"
description = "A Tauri App"
authors = ["Shirasawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.19", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.83"

